--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,6 +46,7 @@ file.reference.javafx.media.jar=../../JavaFX16/lib/javafx.media.jar
 file.reference.javafx.swing.jar=../../JavaFX16/lib/javafx.swing.jar
 file.reference.javafx.web.jar=../../JavaFX16/lib/javafx.web.jar
 file.reference.jfoenix-9.0.10.jar=../Calculator/public/jfoenix/jfoenix-9.0.10.jar
+file.reference.retrofit-2.9.0.jar=public/retrofit/retrofit-2.9.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -60,7 +61,8 @@ javac.classpath=\
     ${libs.JWSAntTasks.classpath}:\
     ${file.reference.bootstrapfx-core-0.4.0.jar}:\
     ${file.reference.fontawesomefx-8.1.jar}:\
-    ${file.reference.jfoenix-9.0.10.jar}
+    ${file.reference.jfoenix-9.0.10.jar}:\
+    ${file.reference.retrofit-2.9.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
