--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TalkpadFrontend
 endorsed.classpath=
 excludes=
+file.reference.activation.jar=public/JavaMail/JAF/activation.jar
 file.reference.bootstrapfx-core-0.4.0.jar=../Calculator/public/Bootstrap/bootstrapfx-core-0.4.0.jar
 file.reference.converter-gson-2.9.0.jar=public/retrofit/converter-gson-2.9.0.jar
 file.reference.converter-scalars-2.9.0.jar=public/retrofit/converter-scalars-2.9.0.jar
+file.reference.dsn.jar=public/JavaMail/lib/dsn.jar
 file.reference.fontawesomefx-8.1.jar=../Calculator/public/Fontawesome/fontawesomefx-8.1.jar
 file.reference.gson-2.8.5.jar=public/retrofit/gson-2.8.5.jar
+file.reference.imap.jar=public/JavaMail/lib/imap.jar
 file.reference.javafx-swt.jar=../../JavaFX16/lib/javafx-swt.jar
 file.reference.javafx.base.jar=../../JavaFX16/lib/javafx.base.jar
 file.reference.javafx.controls.jar=../../JavaFX16/lib/javafx.controls.jar
@@ -49,9 +52,13 @@ file.reference.javafx.media.jar=../../JavaFX16/lib/javafx.media.jar
 file.reference.javafx.swing.jar=../../JavaFX16/lib/javafx.swing.jar
 file.reference.javafx.web.jar=../../JavaFX16/lib/javafx.web.jar
 file.reference.jfoenix-9.0.10.jar=../Calculator/public/jfoenix/jfoenix-9.0.10.jar
+file.reference.mail.jar=public/JavaMail/mail.jar
+file.reference.mailapi.jar=public/JavaMail/lib/mailapi.jar
 file.reference.okhttp-3.14.9.jar=public/retrofit/okhttp-3.14.9.jar
 file.reference.okio-1.17.2.jar=public/retrofit/okio-1.17.2.jar
+file.reference.pop3.jar=public/JavaMail/lib/pop3.jar
 file.reference.retrofit-2.9.0.jar=public/retrofit/retrofit-2.9.0.jar
+file.reference.smtp.jar=public/JavaMail/lib/smtp.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -72,7 +79,14 @@ javac.classpath=\
     ${file.reference.converter-scalars-2.9.0.jar}:\
     ${file.reference.gson-2.8.5.jar}:\
     ${file.reference.okhttp-3.14.9.jar}:\
-    ${file.reference.okio-1.17.2.jar}
+    ${file.reference.okio-1.17.2.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.smtp.jar}:\
+    ${file.reference.dsn.jar}:\
+    ${file.reference.imap.jar}:\
+    ${file.reference.mailapi.jar}:\
+    ${file.reference.pop3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
