--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -133,7 +133,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=--module-path "/home/gaurav/JavaFX15/lib" --add-modules=javafx.controls,javafx.fxml,javafx.base,javafx.graphics,javafx.media,javafx.swing,javafx.web
+run.jvmargs=--module-path 'C:\\Program Files\\openjfx-11.0.2_windows-x64_bin-sdk\\javafx-sdk-11.0.2\\lib' --add-modules=javafx.controls,javafx.fxml,javafx.base,javafx.graphics,javafx.media,javafx.swing,javafx.web
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
